# paul-lessard.github.io

./: .gitignore  About.markdown  LICENSE  README.md  domverity.cabal  paullessard.cabal  site.hs  stack.yaml
css/: lanyon.css
docs/: 404.html  archive.html  atom.xml  index.html  rss.xml
docs/2/: index.html
docs/blog/: page1.html  page2.html
docs/css/: lanyon.css
docs/pages/: About.html  CV.html  Contact.html
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2021-12-20-rice-n-peas.html  2022-01-11-test-math.html  2022-01-15-comprehension-construction.html  2022-01-22-the-elements.html  2022-03-12-zen.html  2022-09-16-unlikely.html  2023-02-09-prose.html  2025-10-21-we-must-add-structure-to-deep-learning-because-revisited.html
docs/tags/: -cosmoi.html  Categories.html  Deep Learning.html  Mauris.html  cooking.html  jamaica.html  lorem.html  mathematics.html  quam.html  talks.html  ∞-cosmoi.html  ♾️-cosmoi.html
docs/talks/: 2021-11-10-spectra-locally-finite-groupoids.html  2021-12-15-weighted-limits-categories-arities.html  2022-12-19-computadic-intro-to-shulmans-ptt.html
pages/: About.markdown  About.md  CV.markdown  CV.md  Contact.markdown  Contact.md
pandoc/: CV.tex  commonOptions.yaml  head.tex  header.tex  htmlOptions.yaml  imgGenOptions.yaml  latexOptions.yaml  literature.bib  macros.tex  pdfGenOptions.yaml
posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2021-12-20-rice-n-peas.markdown  2021-12-20-rice-n-peas.md  2022-01-11-test-math.md  2022-01-15-comprehension-construction.markdown  2022-01-15-comprehension-construction.md  2022-01-22-the-elements.md  2022-03-12-zen.md  2022-09-16-unlikely.md  2023-02-09-prose.md  2025-10-21-we-must-add-structure-to-deep-learning-because-revisited.md
src/: Compilers.hs  Site.hs
talks/: 2021-11-10-spectra-locally-finite-groupoids.md  2021-12-15-weighted-limits-categories-arities.md  2022-12-19-computadic-intro-to-shulmans-ptt.md
templates/: CV.tex  default.html  head.html  index.html  post.html  sidebar.html  talk.html
