name:                domverity
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dom-verity/domverity#readme
license:             MIT
license-file:        LICENSE
author:              Dom Verity
maintainer:          dom.verity@gmail.com
copyright:           Copyright ©2021 Dominic Verity
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable domverity
  main-is:           Site.hs
  other-modules:     Compilers

  default-language:  Haskell2010
  ghc-options:       -threaded
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && < 5
                  ,  hakyll == 4.15.*
                  ,  blaze-html == 0.9.*
                  ,  containers == 0.6.*
                  ,  filepath == 1.4.*
                  ,  pandoc == 2.14.*
                  ,  pandoc-crossref == 0.3.*
                  ,  process == 1.6.*
                  ,  text == 1.2.*
